--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<!-- Deskripsi Aplikasi -->
-				<h2>Adinda Aulia Rahmawati - Starla</h2>
+				<h2>Irma Amanda Putri - Starla</h2>
 				<h2>SAT-PAM</h2>
 				<h4>Sms Aman Tanpa sPAM</h4><br>
 				<p style="text-align: justify;text-justify: inter-word;">
